--- a/templates/craft_sicherungWebsite/templates/kontakt/index.html
+++ b/templates/craft_sicherungWebsite/templates/kontakt/index.html
@@ -98,101 +98,6 @@
 
 <div class="col-12" style="padding-bottom: 1rem;"> *Pflichtfelder  </div>
 
-<div class="col-sm-12"><hr style="margin-bottom: 2rem;"></div>
-
-<div class="col-12" style="padding-bottom: 1rem">  <h4>Ich habe Interesse an</h4> </div>
-
-<div class="col-sm-6"  style="padding-bottom: 1rem;">
-  <div class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" id="customCheck1" name="message[Interesse an][]" value="Infomaterial">
-    <label class="custom-control-label" for="customCheck1">allgemeinem Informaterial</label>
-  </div>
-</div>
-
-<div class="col-sm-6"  style="padding-bottom: 1rem;">
-  <div class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" id="customCheck2" name="message[Interesse an][]" value="Rundmails">
-    <label class="custom-control-label" for="customCheck2">Rundmails</label>
-  </div>
-</div>
-
-<div class="col-sm-6"  style="padding-bottom: 1rem;">
-  <div class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" id="customCheck3" name="message[Interesse an][]" value="Freiwilligendienst/Praktikum">
-    <label class="custom-control-label" for="customCheck3">Freiwilligendienst/Praktikum</label>
-  </div>
-</div>
-
-<div class="col-sm-6"  style="padding-bottom: 1rem;">
-  <div class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" id="customCheck4" name="message[Interesse an][]" value="Rundbriefe">
-    <label class="custom-control-label" for="customCheck4">Rundbriefe</label>
-  </div>
-</div>
-
-<div class="col-sm-6"  style="padding-bottom: 1rem;">
-  <div class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" id="customCheck5" name="message[Interesse an][]" value="Projektbesuch">
-    <label class="custom-control-label" for="customCheck5">Projektbesuch</label>
-  </div>
-</div>
-
-<div class="col-sm-6"  style="padding-bottom: 1rem;">
-  <div class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" id="customCheck6" name="message[Interesse an][]" value="Spendenmöglichkeiten">
-    <label class="custom-control-label" for="customCheck6">Verschiedenen Spendenmöglichkeiten</label>
-  </div>
-</div>
-
-<div class="col-sm-6"  style="padding-bottom: 1rem;">
-  <div class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" id="customCheck7" name="message[Interesse an][]" value="Gastreferenten">
-    <label class="custom-control-label" for="customCheck7">Gastreferenten</label>
-  </div>
-</div>
-
-<div class="col-sm-6"  style="padding-bottom: 1rem;">
-  <div class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" id="customCheck8" name="message[Interesse an][]" value="Patenschaften">
-    <label class="custom-control-label" for="customCheck8">Patenschaften</label>
-  </div>
-</div>
-
-<div class="col-sm-12"><hr style="margin-top: 1rem; margin-bottom: 2rem;"></div>
-
-</div> <!-- row-container -->
-
-<div class="row">
-
-<div class="col-12" style="padding-bottom: 1rem">  <h4>Ich möchte Chance e.V. unterstützen</h4> </div>
-
-<div class="col-sm-6"  style="padding-bottom: 1rem;">
-  <div class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" id="customCheck9" name="message[Unterstützung durch][]" value="Gebet">
-    <label class="custom-control-label" for="customCheck9">durch Gebet</label>
-  </div>
-</div>
-
-<div class="col-sm-6"  style="padding-bottom: 1rem;">
-  <div class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" id="customCheck10" name="message[Unterstützung durch][]" value="praktische Mitarbeit">
-    <label class="custom-control-label" for="customCheck10">durch praktische Mitarbeit</label>
-  </div>
-</div>
-
-<div class="col-sm-6"  style="padding-bottom: 1rem;">
-  <div class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" id="customCheck11" name="message[Unterstützung durch][]" value="Spenden">
-    <label class="custom-control-label" for="customCheck11">durch Spenden</label>
-  </div>
-</div>
-
-<div class="col-sm-6"  style="padding-bottom: 1rem;">
-  <div class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" id="customCheck12" name="message[Unterstützung durch][]" value="Einladung zu einer Infoveranstaltung">
-    <label class="custom-control-label" for="customCheck12">durch Einladung zu einer Infoveranstaltung</label>
-  </div>
-</div>
 
 <div class="col-sm-12"><hr style="margin-top: 1rem; margin-bottom: 2rem;"></div>
 
@@ -203,7 +108,7 @@
 
 <div class="col-sm-12">
   <div class="custom-control custom-checkbox">
-    <input type="checkbox" required class="custom-control-input" id="customCheck13" name="message[Unterstützung durch][]" value="Einladung zu einer Infoveranstaltung">
+    <input type="checkbox" required class="custom-control-input" id="customCheck13">
     <label class="custom-control-label" for="customCheck13"> {{ entry.text }}</label>
   </div>
 </div>
