--- a/templates/craft_sicherungWebsite/templates/_layouts/weiterleitungkorrekt.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/weiterleitungkorrekt.html
@@ -1,9 +1,9 @@
-<div class="zwoelferspaltenlayout container text-left" style="background-color: #f8f5f2; padding-top: 0px;">
+<div class="zwoelferspaltenlayout container text-left" style="background-color: white; padding-top: 0px;">
 <div class="row">
   <div class="col-md-4" style="padding: 0;">
-    <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
+    <img class="img-fluid w-100 h-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
   </div>
-  <div class="col-md-8" style="padding-top: 2rem; padding-left: 30px;">
+  <div class="col-md-8" style="padding-top: 2rem; padding-left: 30px; background-color: #f8f5f2;">
     <h3> {{ entry.title }} </h3>
     <div id="copy"> {{ entry.text }}</div>
   </div>
