--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -11,7 +11,7 @@
   </style>
 
   <!-- navbar-light links the colors with the background image -->
-  <nav class="navbar navbar-expand-lg fixed-top navbar-light" data-toggle="affix" style="padding-top: 0px; margin-top: -10px;">
+  <nav class="navbar navbar-expand-lg fixed-top navbar-light" data-toggle="affix" style="padding: 0px; margin-top: -10px;">
 
     <div class="container zwoelferspaltenlayout" style="padding: 0px;">
 
