--- a/templates/craft_sicherungWebsite/templates/projekte/programme.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme.html
@@ -42,9 +42,9 @@
 
           {% for entry in entries %}
           {% set counter = counter + 1 %}
-          <div class="col-lg-4 col-md-6 col-sm-6" style="padding-bottom: 50px;">
+          <div class="col-lg-4 col-md-6 col-sm-6" style="padding-bottom: 40px;">
 
-          <div class="card border-light h-100">
+          <div class="card border-light h-100" style="margin: 0 5px;">
             <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
             <div class="card-body">
                 <h3>{{ entry.anleser }}</h3>
