--- a/templates/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
@@ -7,29 +7,34 @@
 {{ entry.titelfeldFuerJens }}
 {% endblock %}
 
+{% block headerZusatz %}
+<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css"/>
+{% endblock %}
+
 {% block block1 %}
 
 <nav id="myScrollspy">
   <ul class="nav nav-pills flex-column">
-       <li class="nav-item">   <a class="nav-link active" href="#start"> </a> <span>Chancen für die Schöpfung</span> </li>
-       <li class="nav-item">   <a class="nav-link" href="#bestandteile"></a> <span> Die Bestandteile </span>  </li>
-       <li class="nav-item">   <a class="nav-link" href="#ziel"></a> <span>Das Ziel</span>  </li>
-       <li class="nav-item">   <a class="nav-link active" href="#zahlen"></a> <span>In Zahlen</span> </li>
-       <li class="nav-item">   <a class="nav-link" href="#gelingendesLeben"></a> <span>Gelingendes Leben </span>  </li>
+    <li class="nav-item">   <a class="nav-link active" href="#start"> </a> <span>Chancen für die Schöpfung</span> </li>
+    <li class="nav-item">   <a class="nav-link" href="#bestandteile"></a> <span> Die Bestandteile </span>  </li>
+    <li class="nav-item">   <a class="nav-link" href="#ziel"></a> <span>Das Ziel</span>  </li>
+    <li class="nav-item">   <a class="nav-link active" href="#zahlen"></a> <span>In Zahlen</span> </li>
+    <li class="nav-item">   <a class="nav-link" href="#gelingendesLeben"></a> <span>Gelingendes Leben </span>  </li>
   </ul>
 </nav>
 
 <div class="container-fluid text-center" style="padding-top: 7rem; position: relative;" id="start">
 
   <nav aria-label="breadcrumb" id="info">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte">Projekte</a></li>
-    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte/programme.html">Programme</a></li>
-    <li class="breadcrumb-item"> Naturschutz </li>
-  </ol>
-</nav>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte">Projekte</a></li>
+      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte/programme.html">Programme</a></li>
+      <li class="breadcrumb-item"> Naturschutz </li>
+    </ol>
+  </nav>
 
-<img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
+  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
 
 
   <div class="container achterspaltenlayout" style="padding-top: 0px; padding-bottom: 0; position: relative;">
@@ -54,9 +59,9 @@
   </div>
 </div>
 
-  <img class="img-fluid mx-auto d-block" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-projekte-programme-naturschutz.jpg').one().getUrl() }}">
+<img class="img-fluid mx-auto d-block" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-projekte-programme-naturschutz.jpg').one().getUrl() }}">
 
-  <div class="container achterspaltenlayout" id="video"></div>
+<div class="container achterspaltenlayout" id="video"></div>
 
 <div class="container achterspaltenlayout text-center" id="bestandteile" style="padding-top: 2rem;">
   {% set entry = craft.entries.section('projekte').slug('bestandteile-naturschutzprogramms').one() %}
@@ -74,165 +79,139 @@
     {% for entry in entries %} {% set counter = counter + 1 %}
     <div class="card" style=" border-color: white; border-top-color: #ed6e2c; border-width: 1px; margin-bottom: 20px;">
       <div class="card-header bg-white">
-      <a class="collapsed card-link" data-toggle="collapse" href="#{{counter}}">
-        <div class="row">
-          <div class="col-md-11 col-10">
-            <h4> {{ entry.title }} </h4>
+        <a class="collapsed card-link" data-toggle="collapse" href="#{{counter}}">
+          <div class="row">
+            <div class="col-md-11 col-10">
+              <h4> {{ entry.title }} </h4>
+            </div>
+            <div class="col-md-1 col-2">
+              <img src="{{ akkordionBilder.bild.one().url }}" style="height: 1rem; float: right; margin-top: .25rem;">
+            </div>
           </div>
-          <div class="col-md-1 col-2">
-            <img src="{{ akkordionBilder.bild.one().url }}" style="height: 1rem; float: right; margin-top: .25rem;">
-          </div>
-        </div>
-      </a>
-        </div>
-        <div id="{{counter}}" class="collapse" data-parent="#accordion">
-          <div class="card-body" id="copy">
-            {{ entry.text }}
-          </div>
+        </a>
+      </div>
+      <div id="{{counter}}" class="collapse" data-parent="#accordion">
+        <div class="card-body" id="copy">
+          {{ entry.text }}
         </div>
       </div>
+    </div>
+    {% endfor %}
+    {% endif %}
+
+  </div>
+</div>
+
+<div class="container-fluid no-padding" style="background-color: #ffffff" id="ziel">
+  <div class="container achterspaltenlayout text-center">
+    {% set entry = craft.entries.section('projekte').slug('bewahrung-schöpfung').one() %}
+    <h2> {{ entry.title }} </h2>
+    <div id="anleser"> {{ entry.anleser }}    </div>
+  </div>
+
+  <div class="container zwoelferspaltenlayout" style="padding-top: 0;">
+
+    <div class="row">
+      {% set entries = craft.entries.section('projekte').slug('bewahrung-schöpfung').one().children().all() %}
+
+      {% if entries | length %}
+
+      {% for entry in entries %}
+      <div class="col-sm-4">
+        <div id="copy"> {{ entry.text }} </div>
+      </div>
+
       {% endfor %}
+
       {% endif %}
 
     </div>
   </div>
+</div>
 
-  <div class="container-fluid no-padding" style="background-color: #ffffff" id="ziel">
-    <div class="container achterspaltenlayout text-center">
-      {% set entry = craft.entries.section('projekte').slug('bewahrung-schöpfung').one() %}
-      <h2> {{ entry.title }} </h2>
-      <div id="anleser"> {{ entry.anleser }}    </div>
-    </div>
+{% set entry = craft.entries.section('projekte').slug('waldpate-werden').one() %}
 
-    <div class="container zwoelferspaltenlayout" style="padding-top: 0;">
-
-      <div class="row">
-        {% set entries = craft.entries.section('projekte').slug('bewahrung-schöpfung').one().children().all() %}
-
-        {% if entries | length %}
-
-        {% for entry in entries %}
-        <div class="col-sm-4">
-          <div id="copy"> {{ entry.text }} </div>
-        </div>
-
-        {% endfor %}
-
-        {% endif %}
-
-      </div>
+<div class="container-fluid no-padding"  style="padding-top: 2.5rem; padding-bottom: 2.5rem; background-image: url({{ entry.bild.one().url }});">
+  <div class="row">
+    <div class="col-md-1">  </div>
+    <div class="col-md-3">   <img  style="position: relative; top: 50%; transform: translateY(-50%);" class="img-fluid mx-auto d-block" src="{% if entry.bild.inReverse().one() is not null %}  {{ entry.bild.inReverse().one().getUrl() }}  {% endif %}"> </div>
+    <div class="col-md-7" style="padding-left: 30px;">
+      <h4 style="color: white;"> {{ entry.title }} </h4>
+      <div id="copy" style="color: white;"> {{ entry.text }}</div>
+      <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/verschiedenetabs/waldpate.html" class="btn btn-primary" role="button">Waldpate werden</a>
     </div>
   </div>
-
-  {% set entry = craft.entries.section('projekte').slug('waldpate-werden').one() %}
-
-  <div class="container-fluid no-padding"  style="padding-top: 2.5rem; padding-bottom: 2.5rem; background-image: url({{ entry.bild.one().url }});">
-    <div class="row">
-      <div class="col-md-1">  </div>
-      <div class="col-md-3">   <img  style="position: relative; top: 50%; transform: translateY(-50%);" class="img-fluid mx-auto d-block" src="{% if entry.bild.inReverse().one() is not null %}  {{ entry.bild.inReverse().one().getUrl() }}  {% endif %}"> </div>
-      <div class="col-md-7" style="padding-left: 30px;">
-        <h4 style="color: white;"> {{ entry.title }} </h4>
-        <div id="copy" style="color: white;"> {{ entry.text }}</div>
-        <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/verschiedenetabs/waldpate.html" class="btn btn-primary" role="button">Waldpate werden</a>
-      </div>
-    </div>
-  </div> <!-- Der orange Berg mit dem Spendenaufruf -->
+</div> <!-- Der orange Berg mit dem Spendenaufruf -->
 
 
-  <div class="container achterspaltenlayout text-center" style="padding-top: 2rem;">
-    {% set entry = craft.entries.section('projekte').slug('regenwald').one() %}
+<div class="container achterspaltenlayout text-center" style="padding-top: 2rem;">
+  {% set entry = craft.entries.section('projekte').slug('regenwald').one() %}
 
-    <h2> {{ entry.title }} </h2>
-    <div id="anleser" style="padding-bottom: 0;"> {{ entry.anleser }}    </div>
-  </div>
+  <h2> {{ entry.title }} </h2>
+  <div id="anleser" style="padding-bottom: 0;"> {{ entry.anleser }}    </div>
+</div>
 
-  <div class="container achterspaltenlayout" style="padding-bottom: 0;">
-    <div id="copy"> {{ entry.text }}    </div>
-  </div>
+<div class="container achterspaltenlayout" style="padding-bottom: 0;">
+  <div id="copy"> {{ entry.text }}    </div>
+</div>
 
-    <img class="img-fluid" src=" {{ craft.assets.filename('chance-projekte-programme-naturschutz_maedchen.jpg').one().getUrl() }}">
+<img class="img-fluid" src=" {{ craft.assets.filename('chance-projekte-programme-naturschutz_maedchen.jpg').one().getUrl() }}">
 
-<style>
-  .stylevorgaben2 .carousel-item .col-md-4 { /*Einfügen der Border zwischen den Leisten */
-    border-style: solid;
-    border-width: 1rem;
-    border-color: #f8f5f2;
-    background-color: white;
-    padding: 2rem;
-    height: 25.5rem;
-  }
+{% include '_layouts/codeschnipsel/karussellmitjs' %}
 
+<style media="screen">
+
+.slick-track{
+  display: flex;
+}
+.slick-slide{
+  display: flex;
+  height: auto;
+  align-items: center; //optional
+  justify-content: center; //optional
+}
 </style>
 
-  <div class="container zwoelferspaltenlayout text-center" id="zahlen">
-    {% set entry = craft.entries.section('projekte').slug('der-chance-regenwald-in-zahlen').one() %}
-    <h3 style="padding-bottom: 2rem;"> {{ entry.title }} </h3>
+<div class="container zwoelferspaltenlayout text-center" id="zahlen">
+  {% set entry = craft.entries.section('projekte').slug('der-chance-regenwald-in-zahlen').one() %}
+  <h2 style="padding-bottom: 2rem;"> {{ entry.title }} </h2>
 
-    {% set entry = craft.entries.section('projekte').slug('1-11').one() %}
+  {% set entry = craft.entries.section('projekte').slug('1-11').one() %}
 
-    <div id="carouselContent" class="carousel slide" data-ride="carousel" data-interval="false">
-      <div class="carousel-inner">
-        <div class="carousel-item active text-center">
-          <div class="row">
+  <div class="karussell">
 
-            <div class="col-md-4"> <!-- px-5 steht für Padding rechts und links ne gewisse Breite -->
-              <h3> {{ entry.title }} </h3>
-              <div id="copy"> {{ entry.text }} </h3> </div>
-            </div>
-
-            {% set counter = 0 %}
-            {% set entries = craft.entries.section('projekte').slug('der-chance-regenwald-in-zahlen').one().children().all() %}
-            {% for entry in entries %} {% set counter = counter + 1 %}
-
-            {% if craft.mobileDetect.isMobile and counter is not divisible by(3) and counter != 11 %} {# Für mobile Geräte wird nach jedem Eintrag das Element geschlossen #}
-          </div>
-          </div>  <div class="carousel-item text-center"> <div class="row">
-            {% endif %}
-
-            {% if counter is divisible by(3) %}
-          </div>
-        </div>  <div class="carousel-item text-center"> <div class="row"> {% endif %}
-
-            <div class="col-md-4" id="{{ 'kasten' ~ counter }}">
-              <h3> {{ entry.title }} </h3>
-              <div id="copy"> {{ entry.text }} </h3> </div>
-            </div>
-
-            {% endfor %}
-          </div>
-        </div>
-      </div>
-
-      {% set entry = craft.entries.section('projekte').slug('2-11').one() %}
-      <a class="carousel-control-prev" href="#carouselContent" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon mr-md-5 mr-sm-4" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselContent" role="button" data-slide="next">
-        <span class="carousel-control-next-icon ml-md-5 ml-sm-4" aria-hidden="true" style="color: red;">
-        </span>
-        <span class="sr-only">Next</span>
-      </a>
+    <div style="padding: 1rem; padding-bottom: 0; margin: 1rem; margin-bottom: 2rem; background-color: white;">
+      <div id="copy" style="color: #ed6e2c; padding-bottom: 1rem;"> {{ entry.title }} </div>
+      <div id="copy"> {{ entry.text }} </div>
     </div>
-  </div>
 
-  <div class="container achterspaltenlayout text-center" style="padding-top: 2rem; padding-bottom: 0;" id="gelingendesLeben">
-    {% set entry = craft.entries.section('projekte').slug('gelingenden-leben').one() %}
-    <h2> {{ entry.title }} </h2>
-    <div id="anleser" style="padding-bottom: 0;"> {{ entry.anleser }}    </div>
+    {% set entries = craft.entries.section('projekte').slug('der-chance-regenwald-in-zahlen').one().children().all() %}
+    {% for entry in entries %}
+    <div style="padding: 1rem; padding-bottom: 0; margin: 1rem; margin-bottom: 2rem; background-color: white;">
+      <div id="copy" style="color: #ed6e2c; padding-bottom: 1rem;"> {{ entry.title }} </div>
+      <div id="copy"> {{ entry.text }} </div>
+    </div>
+    {% endfor %}
   </div>
+</div>
 
-  <div class="container zwoelferspaltenlayout" style="padding-top: 0;">
-    <img class="img-fluid "src="{% if entry.bild.one() is not null %}{{ entry.bild.one().url }} {% endif %}">
-  </div>
+<div class="container achterspaltenlayout text-center" style="padding-top: 2rem; padding-bottom: 0;" id="gelingendesLeben">
+  {% set entry = craft.entries.section('projekte').slug('gelingenden-leben').one() %}
+  <h2> {{ entry.title }} </h2>
+  <div id="anleser" style="padding-bottom: 0;"> {{ entry.anleser }}    </div>
+</div>
+
+<div class="container zwoelferspaltenlayout" style="padding-top: 0;">
+  <img class="img-fluid "src="{% if entry.bild.one() is not null %}{{ entry.bild.one().url }} {% endif %}">
+</div>
 
 <div class="container-fluid no-padding" style="background-color: white; padding-bottom: 3rem;">
-      <div class="container zwoelferspaltenlayout text-center">
-      {% set entry = craft.entries.section('projekte').slug('dorfentwicklung-chancen-für-dörfer').one() %}
-       <div id="anleser" style="padding-bottom: 3rem;"> Lernen Sie unsere weiteren Progamme kennen </div>
-    </div>
+  <div class="container zwoelferspaltenlayout text-center">
+    {% set entry = craft.entries.section('projekte').slug('dorfentwicklung-chancen-für-dörfer').one() %}
+    <div id="anleser" style="padding-bottom: 3rem;"> Lernen Sie unsere weiteren Progamme kennen </div>
+  </div>
 
-    <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px; margin-bottom: 2rem;">
+  <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px; margin-bottom: 2rem;">
     <div class="row">
       <div class="col-md-4" style="padding-left: 0;">
         <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
@@ -242,10 +221,10 @@
         <div id="copy"> {{ entry.text }}</div>
       </div>
     </div>
-    </div> <!-- Weitere Informationen zum Freiwilligendienst -->
+  </div> <!-- Weitere Informationen zum Freiwilligendienst -->
 
-    {% set entry = craft.entries.section('projekte').slug('patenschaft').one() %}
-    <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px;">
+  {% set entry = craft.entries.section('projekte').slug('patenschaft').one() %}
+  <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px;">
     <div class="row">
       <div class="col-md-4" style="padding-left: 0;">
         <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
@@ -255,7 +234,7 @@
         <div id="copy"> {{ entry.text }}</div>
       </div>
     </div>
-    </div> <!-- Weitere Informationen zum Freiwilligendienst -->
-  </div> <!-- Weißer Hintergrund -->
+  </div> <!-- Weitere Informationen zum Freiwilligendienst -->
+</div> <!-- Weißer Hintergrund -->
 
-  {% endblock %}
+{% endblock %}
